# gstreamer_worker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/capture_server/: CMakeLists.txt  main.cpp
apps/viewer_client/: CMakeLists.txt  main.cpp
docs/: architecture.md
include/gstreamer_worker/control/: pipeline_controller.hpp
include/gstreamer_worker/pipeline/: capture_pipeline.hpp  config.hpp  viewer_pipeline.hpp
include/gstreamer_worker/zerocopy/: buffer_exporter.hpp  frame_meta.hpp
libs/control/: CMakeLists.txt  pipeline_controller.cpp
libs/pipeline/: CMakeLists.txt  capture_pipeline.cpp  viewer_pipeline.cpp
libs/zerocopy/: CMakeLists.txt  buffer_exporter.cpp  frame_meta.cpp
scripts/: install_msys2_env.ps1  install_msys2_env.sh  setup_gstreamer.ps1  setup_gstreamer.sh  setup_msys2_env.ps1  setup_msys2_env.sh
tests/: CMakeLists.txt  config_snapshot.cpp
